--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
         </div>
         <div class="header-right">
           <div class="email">
-            <p>packetcode@gmail.com</p>
+            <p>jagamee27@gmail.com</p>
             <i class="fas fa-envelope"></i>
           </div>
-          <div class="linkedin">
-            <p>linkedin.com/in/kamal-teja-157111168/</p>
-            <i class="fab fa-linkedin"></i>
-          </div>
           <div class="github">
-            <p>github.com/packetcode</p>
+            <p>github.com/Jegadesh-B</p>
             <i class="fab fa-github"></i>
           </div>
           <div class="phone">
